Read JSON Finish

--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -7,6 +7,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="appewtc.masterung.ungebookshop.ServiceActivity">
+    tools:context="appewtc.masterung.ungebookshop.ServiceActivity"
+    android:background="@drawable/bg22">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView7"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/h2"
+        android:textStyle="bold"
+        android:textColor="@color/text" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/textView7"
+        android:layout_marginTop="15dp" />
 </RelativeLayout>
